added more stories

--- a/index.html
+++ b/index.html
@@ -265,7 +265,6 @@
                             No one knows just how bad it ultimately will be, but coronavirus' financial damage to showbiz has already been severe
                         </p>
                     </section>
-
                 </div>
                 <div class="col-12 bg-white">
                     <h3 class="text-secondary section-title">opinion</h3>
@@ -379,6 +378,183 @@
                             </a>
                             <p class="section-summary pt-2 text-justify">
                                 When seeking guidance on beating an addiction, there are many things to consider. Where do you go to ensure that you will not just turn the corner, but keep carrying on down the right road for the rest of your life? Find out more.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1570615/nw-james-bond-banner-sponsored.jpg?w=500&h=333&f=547001b6968bad8dcee8cf938a4c68ed" alt="image">
+                            <span class="position-absolute font-weight-bold bg-white p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                Newsweek James Bond Special Edition
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                Agent 007 claimed a spot as the world’s coolest spy since Sean Connery brought him to life on the big screen. Explore Bond’s legacy with the Newsweek Special Edition, featuring behind-the-scenes photos from the films and your complete guide to every Bond Girl, villain and getaway car in the canon.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1568509/newsweek-amplify.png?w=500&h=333&f=98c0ebfc554597997a0de3bd6159812a" alt="image">
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                Newsweek AMPLIFY Launches Strategic Partnership Solutions for Brands
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                Newsweek AMPLIFY, the company's independent business unit, has launched a new program to empower digital brands with comprehensive content marketing and advertising strategies.
+                            </p>
+                        </div>
+                    </section>
+                </div>
+                <div class="col-12 bg-white">
+                    <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
+                        more stories
+                    </h3>
+                    <section class="pt-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578086/dr-anthony-fauci.webp?w=95&h=95&f=1481d379cabab7c927258e0107193931" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Dr. Fauci Says New York's COVID-19 Response Is 'Extraordinarily Powerful'
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                The head of the National Institute of Allergy and Infectious Diseases told Vanity Fair that he had a good working relationship with President Donald Trump.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577952/covid-19-coronavirus-getty-spain.webp?w=95&h=95&f=443e5426a15e0b2c93a324355cd1f560" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Coronavirus Death Rate Could Be Way Lower Than Previously Thought: Study
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                "Our estimates can be applied to any country to inform decisions around the best containment policies for COVID-19," said Professor Azra Ghani of Imperial College London.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577982/ice.webp?w=95&h=95&f=ff4638a456377990689d7551e4863223" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Protests Among ICE Detainees Grow As Four Test Positive For Coronavirus
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                Five ICE workers at detention facilities have also tested positive for COVID-19.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577947/masks-china-protection-europe-faulty-help.jpg?w=95&h=95&l=0&t=0&f=58e08ab40db4cde055f7c3a6f41ece9f" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                EU Flags Concern Over Faulty China Coronavirus Gear, State Media Responds
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                European governments have reported tens of thousands of inadequate protective masks and testing kits ordered from China.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578085/covid19-coronavirus-robert-redfield-cdc-getty.jpg?w=95&h=95&f=c0b6594b39610d126a7eb0630a2699f1" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                CDC Director Says There May Be Second Coronavirus Wave in Late Fall
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                Almost 200,000 COVID-19 cases have been confirmed in the U.S., according to Johns Hopkins University.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1552314/per-salary-banner.jpg?w=95&h=95&l=50&t=43&f=2cff479e92f093034cb41d3d775f998e" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                The Average Woman Loses $407,760 Over Her Life Due to the Gender Wage Gap
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                Equal Pay Day falls on March 31 this year. At the current rate of progress in the U.S., women won't catch up to men when it comes to how much they are paid until 2059. Here's a by-the-numbers look at the persistent gender wage gap.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577838/new-york-city-times-square.webp?w=95&h=95&f=a43cb96652ab9de7284d8bf4d0a892f3" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                31 States Now Have Stay at Home Orders Amid the Coronavirus Outbreak
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                Other states, including Alabama and Georgia, have only issued the stay at home orders in major cities.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577861/stock-image-ferret.webp?w=95&h=95&f=9c5dae4807f63a82c636c9324855a932" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                The FDA is Spending $250,000 Testing the Coronavirus on Ferrets
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                According to the U.S. government's contract website, the FDA awarded Public Health England extra funds to extend their research on the Ebola virus into COVID-19.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577858/piazza-dellesquilino-italy-rome.webp?w=95&h=95&f=99c12bc3618f8b30ec37d8d324ca8e27" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Italy Could Be Free of New COVID-19 Cases by May 16, Experts Predict
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                "We are going in the right direction and we must not change our strategy in the least. The return to normality will be a gradual process," said top Italian health official Franco Locatelli.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577821/trump.webp?w=95&h=95&f=6fd6324cd5667fee98056a137fddd9d0" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Over 120,000 Call for End to Live Coverage of Trump Coronavirus Briefings
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                "Leave the President's insults, false braggadocio, and outright lies on the editing room floor, where they belong," the petition states.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="pt-3 d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1577840/china-coronavirus-wuhan-hubei-cover-state-media.webp?w=95&h=95&f=0d6427e032e31dd715f73160c508ef89" alt="flag">
+                        </div>
+                        <div>
+                            <a class="section-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                China State Media Says Coronavirus Death Toll Cover-Up Theory Is 'Nonsense'
+                            </a>
+                            <p class="section-summary pt-1 pl-3 text-justify">
+                                China appears to have almost stopped the spread of CVID-19 within its borders, but Western leaders have accused Beijing of hiding the true scale of the outbreak.
                             </p>
                         </div>
                     </section>
