added travel section

--- a/index.html
+++ b/index.html
@@ -559,6 +559,53 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-12 bg-white">
+                    <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
+                        culture & travel
+                    </h3>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1577190/locked-down-italy-playing-music.jpg?w=397&h=397&f=fff013a398a6aa17054e4a960dd6ed06" alt="trump">
+                            <span class="position-absolute font-weight-bold bg-light p-1 story-span travel-span">
+                                TRAVEL
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            I'm Locked Down in Italy Playing Music—But I'm More Worried About America
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Two American musicians play a nightly concert on their balcony while quarantined in their newly adopted home in Italy. It's a gift for their neighbors, but they also have a strong message for Americans, too.
+                        </p>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1575422/breakfast-lunch-dinner.jpg?w=397&h=397&f=a6dbd65ad3ba41063a6b46b1f92b7a60" alt="trump">
+                            <span class="position-absolute font-weight-bold bg-light p-1 story-span travel-span">
+                                TRAVEL
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Wanderlust Stricken? The 10 Best Travel TV Shows to Watch Now
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Travelers can still explore the world while binge-watching these travel TV shows in home isolation. Thanks to streaming services, we can virtually send ourselves to nearly any and every part of the planet in just a few clicks.
+                        </p>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1575934/times-square-new-york.jpg?w=397&h=397&f=8e63eb59770c9b104b3e1ef85a1da1a7" alt="trump">
+                            <span class="position-absolute font-weight-bold bg-light p-1 story-span travel-span">
+                                TRAVEL
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Social Distancing Around the World in Photos
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            From Rome's desolate Spanish Steps to New York's deserted Times Square, take a look at some of the world's busiest landmarks that are all now but eerily empty.
+                        </p>
+                    </section>
+                </div>
                 
 
             </div>
