added latest news section

--- a/index.html
+++ b/index.html
@@ -606,6 +606,61 @@
                         </p>
                     </section>
                 </div>
+                <div class="col-12 bg-white">
+                    <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
+                        latest news
+                    </h3>
+                    <section class="pt-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578094/police-check.jpg?w=95&h=95&f=d35a67255ee8279966ac78635438318c" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Man Fined After Driving 100 Miles to Visit Girlfriend During Lockdown
+                            </a>
+                        </div>
+                    </section>
+                    <section class="pt-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578092/n95-surgical-mask.jpg?w=95&h=95&f=789eed89bf5648a0b736d3e32439084e" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                New York Business Fined for Allegedly Price Gouging Out of Date Face Masks
+                            </a>
+                        </div>
+                    </section>
+                    <section class="pt-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578089/california-rep-devin-nunes.jpg?w=95&h=95&f=7cfdb2122de03703554ead144fffab55" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Nunes Says California School Closures Are 'Way Overkill' Amid Pandemic
+                            </a>
+                        </div>
+                    </section>
+                    <section class="pt-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578088/unsplash-hair-cut-men.jpg?w=95&h=95&f=415981c44a88ffa1e34b40c5a0775983" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                How to Cut Men's Hair at Home During the Coronavirus Outbreak
+                            </a>
+                        </div>
+                    </section>
+                    <section class="pt-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1566691/mega-millions-lottery-ticket.jpg?w=95&h=95&f=1352c78da60cd9ce8dfe817823d6f536" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Mega Millions Results, Numbers for 3/31/20: Did Anyone Win the $113 Million
+                            </a>
+                        </div>
+                    </section>
+                </div>
                 
 
             </div>
