added other sponsored section

--- a/index.html
+++ b/index.html
@@ -661,6 +661,99 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-12 bg-white">
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1559216/tokyo-my-city-chizu-nakamoto.jpg?w=500&h=333&f=9c0c7599e1d2310c5649861e93649619" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                Female Entrepreneur Active in Tokyo and Uganda
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                APT Women aims to foster and educate fledgling global business leaders like Chizu Nakamoto.
+                            </p>
+                        </div>
+                    </section>
+                    <div class=" w-50 ml-auto mr-auto bg-light p-3 border">
+                        <div class="d-flex pb-1 align-items-center" >
+                            <img class="pr-2 icon-img mb-2" src="/img/n-icon.png" alt="image">
+                            <p class="font-weight-bold text-dark mt-2">
+                                SIGN UP FOR OUR NEWSLETTER
+                            </p>
+                        </div>
+                        <a class="text-white p-2 d-block font-weight-bold mb-2" id="sing-up-button" href="#">
+                            SIGN UP  >
+                        </a>
+                        <a class="text-dark" href="#">
+                            Update your preferences >>
+                        </a>
+                    </div>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1576572/shutterstock-680368252.jpg?w=500&h=333&f=72d533330ba92c6f1f08392706a99bf5" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                Cryptocurrencies: A Safe Investment inTimes of Crisis?
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                As the coronavirus is raising havoc across financial markets, investors are looking for ‘safe havens,’ and some are making a case for cryptocurrencies.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1573624/salisbury-university-franklin-p-perdue-school-business.jpg?w=500&h=333&f=3659296e96fa8be21c4386be2001f074" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                How Can a Good Business Education Benefit You?
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                Enrolling at a good Business School might be the best investment you can make in your future, and while costs can be significant, the rewards are incalculable. Find out more.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1563375/delphian-school.jpg?w=500&h=333&f=c4fe893bfb5642271e1298b1bea3989b" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
+                                SPONSORED INSIGHT
+                            </span>
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                What Can A Private Education Do For Your Child?
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                What is the single most consequential choice you make to give your child the best possible advantage in life? If you think it’s education, read on.
+                            </p>
+                        </div>
+                    </section>
+                    <section class="p-3 bg-white">
+                        <div class="w-100 position position-relative border border-bottom-none">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1572014/worlds-best-hospitals-2020.png?w=500&h=333&f=c871e2709e79f9ba030be976797f7aa2" alt="image">
+                        </div>
+                        <div class="border border-top-none pl-3 pr-3">
+                            <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                                World's Best Hospitals 2020
+                            </a>
+                            <p class="section-summary pt-2 text-justify">
+                                Newsweek partnered with Statista Inc. to rank the leading hospitals in 21 countries
+                            </p>
+                        </div>
+                    </section>
+                </div>
                 
 
             </div>
